samira_fairuz_resume

--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
 <!-- your HTML goes here -->
+<html>
+    <head>
+        <h1>
+            <i>Samira's Resume</i>
+        </h1>
+        <p>
+           Computer Science  
+        </p> 
+    </head>
+    <div>
+        <ul-li>
+           Skills
+           <li>
+               Basketball
+           </li>
+           <li>
+               C++
+           </li>
+           <li>
+               Microsoft Excel, Word, Powerpoint
+           </li>
+           
+        </ul-li>
+    </div>
+    <div>
+        <th>
+            <table>
+                
+            </table>
+        </th>
+    </div>
+</html>
